<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/movie_content_refresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/user_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_content_margin_side"
                android:foreground="?android:attr/selectableItemBackground"
                card_view:cardCornerRadius="4dp"
                card_view:cardBackgroundColor="?attr/colorPrimary">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark">

                    <ImageView
                        android:id="@+id/movie_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:cropToPadding="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo_item_lans" />

                    <TextView
                        android:id="@+id/movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/movie_backdrop"
                        android:layout_gravity="bottom"
                        android:background="@color/colorAccentDark"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:padding="@dimen/app_content_margin_side"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#ffffffff"
                        android:textSize="@dimen/app_text_size" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_layout"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_margin"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/app_content_margin_side">

                    <ImageView
                        android:id="@+id/movie_poster"
                        android:layout_width="130dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:onClick="homepageClick"
                        android:padding="@dimen/app_content_margin_side"
                        android:scaleType="fitXY"
                        android:visibility="gone"
                        app:srcCompat="@drawable/logo_item" />

                    <TextView
                        android:id="@+id/movie_overview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:gravity="center_vertical"
                        android:padding="@dimen/app_content_margin_side"
                        android:text="@string/movie_overview"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/appText"
                        android:textSize="@dimen/app_text_size"
                        android:visibility="gone" />

                </LinearLayout>

                <TextView
                    android:id="@+id/movie_release"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_release"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_vote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_rate"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_id"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_adult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_adult_false"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_status"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_genres"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_genres"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_budget"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_budget"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_revenue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_revenue"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_runtime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_runtime"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_language"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_language"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_homepage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="homepageClick"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_homepage"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_productions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_productions"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/movie_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_trailer"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/movie_rv_trailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:scrollbars="vertical" />

                <TextView
                    android:id="@+id/movie_similar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/app_content_margin_side"
                    android:text="@string/movie_similar"
                    android:textColor="@color/appText"
                    android:textSize="@dimen/app_text_size"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/movie_rv_similar"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:paddingBottom="@dimen/app_content_margin_side"
                    android:paddingTop="@dimen/app_content_margin_side"
                    android:scrollbars="horizontal"
                    android:visibility="gone" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>