<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fenproductions.movietoday.fen.fenproductions.movietoday.activity.AboutActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/app_menu_margin"
        android:layout_marginTop="@dimen/app_menu_margin"
        android:text="@string/app_fen"
        android:textColor="?android:attr/textColorSecondaryInverse"
        android:textSize="@dimen/app_text_size" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="?android:attr/textColorSecondaryInverse"
        android:textSize="@dimen/app_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/about_powered"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/app_menu_margin"
        android:text="@string/about_powered"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/app_text_size" />

    <ImageView
        android:id="@+id/about_powered"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_button_height_small"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/logo_tmdb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="aboutApp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/app_text_size_about"
        android:textStyle="bold" />

</RelativeLayout>
