<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fenproductions.movietoday.fen.fenproductions.movietoday.activity.MenuActivity"
    tools:showIn="@layout/menu_app_bar">

    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/menu_content_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/menu_rv_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingBottom="@dimen/app_content_margin_side"
                    android:paddingTop="@dimen/app_content_margin_side"
                    android:scrollbars="vertical" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone" />

                    <LinearLayout
                        android:id="@+id/menu_content_pages"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/app_content_margin_side"
                        android:visibility="visible">

                        <TextView
                            android:id="@+id/menu_content_page_prev"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:onClick="menuPagePrev"
                            android:paddingBottom="@dimen/activity_margin"
                            android:paddingTop="@dimen/activity_margin"
                            android:text="@string/menu_page_prev"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/app_button_font"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/menu_content_page_text"
                            android:layout_width="25dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:onClick="menuPage"
                            android:paddingBottom="@dimen/activity_margin"
                            android:text="@string/menu_page"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/app_text_size" />

                        <TextView
                            android:id="@+id/menu_content_page_next"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:onClick="menuPageNext"
                            android:paddingBottom="@dimen/activity_margin"
                            android:paddingTop="@dimen/activity_margin"
                            android:text="@string/menu_page_next"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/app_button_font"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/menu_content_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/text_error_empty"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/app_text_size_med"
        android:visibility="gone" />

</android.support.v4.widget.DrawerLayout>
